--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">    
+    <link rel="shortcut icon" href="static/logo/nopadol-logo.png" />
     <title>saleweb</title>
   </head>
   <body>
